--- a/作業15/index.html
+++ b/作業15/index.html
@@ -2,13 +2,13 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>作業15</title>
+    <title>課堂作業15</title>
     <link type="text/css" rel="stylesheet" href="css/styles.css"/>
     <link type="text/css" rel="stylesheet" href="css/skitter.styles.css"/>
     <style>
         .box_skitter_large {
-            width: 1000px;
-            height: 630px;
+            width: 640px;
+            height: 427px;
         }
 
         body {
@@ -34,121 +34,72 @@
     <div class="box_skitter box_skitter_large">
         <ul>
             <li>
-                <img src="images/01.jpg" class="cubeShow">
+                <img src="images/01.jpeg" class="cubeShow">
                 <div class="label_text">
-                    <p>來自西雅圖的攝影師Christopher boffoli突發奇想得運用了超迷你的人型玩偶以及食物當作主角，拍攝了一系列叫做『胃口大開』的作品，當你活在食物上，是怎樣的光景？？</p>
+                    <p>來向大家介紹我覺得台北的好吃美食～</p>
                 </div>
             </li>
 
             <li>
-                <img src="images/02.jpg" class="glassCube">
+                <img src="images/02.jpeg" class="glassCube">
                 <div class="label_text">
-                    <p>工作累了嗎？？那就坐在高處先靜下心來休息一下吧.....XD</p>
+                    <p>初魚鐵板燒/具有多家分店，無菜單預約制鐵板料理</p>
                 </div>
             </li>
 
             <li>
-                <img src="images/03.jpg" class="cubeJelly">
+                <img src="images/03.jpeg" class="cubeJelly">
                 <div class="label_text">
-                    <p>地殼探測員出動！探測雞蛋表層下是否有小雞孵出呢？？？</p>
+                    <p>RAW/台北米其林星級料理，一生一定要吃一次！</p>
                 </div>
             </li>
 
             <li>
-                <img src="images/04.jpg" class="directionRight">
+                <img src="images/04.jpeg" class="directionRight">
                 <div class="label_text">
-                    <p>你是否也好奇？那就一起潛下看看”茶”裡的世界吧！:)</p>
+                    <p>初衷小鹿/松山區套餐式火鍋，肉質鮮美餐點用心，男生吃也可以飽到天靈蓋</p>
                 </div>
             </li>
 
             <li>
-                <img src="images/05.jpg" class="paralell">
+                <img src="images/05.jpeg" class="paralell">
                 <div class="label_text">
-                    <p>哇！好多好好吃的巨大馬卡龍！傷腦筋@ @該如何處理呢？</p>
+                    <p>貓下去/台北老牌創新臺菜料理</p>
                 </div>
             </li>
 
             <li>
-                <img src="images/06.jpg" class="upBars">
+                <img src="images/06.jpeg" class="upBars">
                 <div class="label_text">
-                    <p>突有龐然大物！發現好吃的海鮮，大豐收>///太棒了！！</p>
+                    <p>高雄肉圓許/民生社區巷內的美食，只有在地人知道！</p>
                 </div>
             </li>
 
             <li>
-                <img src="images/07.jpg" class="circles">
+                <img src="images/07.jpeg" class="circles">
                 <div class="label_text">
-                    <p>發現新大陸，是否有新生命呢？？？太空人出動探索囉！^ ^</p>
+                    <p>虎笑麵屋/乾麵配牛肉湯，最暖心的享受</p>
                 </div>
             </li>
 
             <li>
-                <img src="images/08.jpg" class="fade">
+                <img src="images/08.jpeg" class="fade">
                 <div class="label_text">
-                    <p>在天然的牛奶湖上悠閒划小船，好奇的人可以喝看看呦！！</p>
+                    <p>鬼金棒/台北最有名拉麵，麻度辣度一次滿足！</p>
                 </div>
             </li>
 
             <li>
-                <img src="images/09.jpg" class="circlesInside">
+                <img src="images/09.jpeg" class="circlesInside">
                 <div class="label_text">
-                    <p>糟糕！！！> 芥末好像太多了，讓我把它抹均勻一點吧！</p>
+                    <p>赤鐵廣島燒/道地的日式廣島燒，就連大同附近都有新的分店囉！</p>
                 </div>
             </li>
 
             <li>
-                <img src="images/10.jpg" class="glassBlock">
+                <img src="images/10.jpeg" class="glassBlock">
                 <div class="label_text">
-                    <p>小心一點！！玩耍之餘不要掉下去烤焦囉！！！......@ @</p>
-                </div>
-            </li>
-
-            <li>
-                <img src="images/11.jpg" class="cubeSize">
-                <div class="label_text">
-                    <p>爬呀爬！看我爬上登頂，欣賞眼前漂亮的風景！哈哈哈哈X D</p>
-                </div>
-            </li>
-
-            <li>
-                <img src="images/12.jpg" class="cubeSpread">
-                <div class="label_text">
-                    <p>啦※啦※啦※多麼悠閒時光押！坐在杯上一起來唱歌吧！:D</p>
-                </div>
-            </li>
-
-            <li>
-                <img src="images/13.jpg" class="cubeRandom">
-                <div class="label_text">
-                    <p>轟◎隆◎隆◎加油！加油！加油！趕緊趕工開挖囉！！^ ^</p>
-                </div>
-            </li>
-
-            <li>
-                <img src="images/14.jpg" class="cubeStop">
-                <div class="label_text">
-                    <p>甜筒房子，我們是小哈比人！猜猜隔壁住的會是誰阿？@ @</p>
-                </div>
-            </li>
-
-            <li>
-                <img src="images/15.jpg" class="horizontal">
-                <div class="label_text">
-                    <p>道路裂了，怎麼辦？？放心！修補的工作就交給我們吧！;)</p>
-                </div>
-            </li>
-
-            <li>
-                <img src="images/16.jpg" class="circlesRotate">
-                <div class="label_text">
-                    <p>通通不准動！再動我就開槍！你們都是嫌疑犯帶回警察局！</p>
-                </div>
-            </li>
-
-            <li>
-                <img src="images/17.jpg" class="cubeSpread">
-                <div class="label_text">
-                    <p>叮◎叮◎叮◎YA！一起騎車出遊吧:)看看周邊的道路風景！</p>
+                    <p>鮮味屋/從小吃到大的火鍋店，平價且美味，肯定是大拇指的！</p>
                 </div>
             </li>
 
